Fix the gap issue in event items simply by using `w-auto` and `h-auto`

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
 
 @layer components {
     .event-item {
-        @apply w-80 h-44 xl:w-96 2xl:w-[25rem] xl:h-56 relative overflow-hidden rounded-xl after:absolute after:w-full after:h-full
+        @apply w-full h-auto relative overflow-hidden rounded-xl after:absolute after:w-full after:h-full
         after:bg-white/100 after:inset-0 after:opacity-0 hover:after:opacity-100 hover:after:bg-white/50 after:transition-all after:duration-500
         after:content-['View_Detail'] after:text-center after:pt-[25%] after:text-gray-500 after:font-medium after:drop-shadow-sm;
     }
